--- a/11.html
+++ b/11.html
@@ -15,3 +15,5 @@
 <h2>Биология </h2>
  Учебник стр 117-121 читать, вопросы устно. Определение «Обмен веществ» учить
 РТ №1,2 (стр. 5-6)
+<h2>Русский</h2>
+Упр 30
