--- a/архив дз.html
+++ b/архив дз.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="logo.ico">
    </head>
 <div>
+	<p > <h1><a class="nb" href="9.html">Дз обществознание, история, русский, литература 10 сентября</a></h1></p>
 	<p > <h1><a class="nb" href="лит2.html">Дз литература, математика, английский 9 сентября</a></h1></p>
 	<p > <h1><a class="nb" href="8.html">Дз нагл. Геометрия, русский 8 сентября</a></h1></p>
 	<p > <h1><a class="nb" href="10.html">Дз история, русский, математика, английский 7 сентября</a></h1></p>
