--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@ document.write(day[d.getDay()]+" " +d.getDate()+ " " + month[d.getMonth()]
 				
 				
 
-<p > <h1><a class="nb" href="11.html">Дз изо, биология, русский 11 сентября</a></h1></p>
-<p > <h1><a class="nb" href="13.html">Дз музыка, география, английский, математика 13 сентября</a></h1></p>
+
+
+<p > <h1><a class="nb" href="14.html">Дз  география, английский 13 сентября</a></h1></p>
+<p > <h1><a class="nb" href="14.2.html">Дз русский на 14 сентября</a></h1></p>
 <p > <h1><a class="nb" href="15.html">Дз нагл. Геометрия, физика 15 сентября</a></h1></p>
 <p > <h1><a class="nb" href="17.html">Дз Обществознание 16 сентября</a></h1></p>
 
