--- a/13.html
+++ b/13.html
@@ -18,5 +18,7 @@
 <h2>Английский </h2>
 1 группа<br>
 W.b p.6 ex 1,2
+<h3>Ответы </h3>
+<img src="англ.jpg">
 <h2>Математика </h2>
 Упр 42-59 зелёные и выучить все призна ки деление на... 
