--- a/13.html
+++ b/13.html
@@ -15,6 +15,9 @@
 Романс сирень: <a href="https://m.youtube.com/watch?v=1p_i-K7-F2g" class="nb" >https://m.youtube.com/watch?v=1p_i-K7-F2g</a>
 <h2>География</h2>
 Параграфы 32 страница 38 термины атлас страница 7 рабочая тетрадь страница 5-6 номер 1-4
+<h3>Ответы </h3>
+<img src="география.jpg">
+	<img src="география2.jpg">
 <h2>Английский </h2>
 1 группа<br>
 W.b p.6 ex 1,2
