--- a/архив дз.html
+++ b/архив дз.html
@@ -10,7 +10,7 @@
 	<p > <h1><a class="nb" href="11.html">Дз изо, биология, русский 11 сентября</a></h1></p>
 	<p > <h1><a class="nb" href="9.html">Дз обществознание, история, русский, литература 10 сентября</a></h1></p>
 	<p > <h1><a class="nb" href="лит2.html">Дз литература, математика, английский 9 сентября</a></h1></p>
-	<p>  <h1> <a class = " нб " href=" 8.html " > Дз нагл. Геометрия, русский 8 сентября </a >
+	<p>  <h1> <a class = " nb " href=" 8.html " > Дз нагл. Геометрия, русский 8 сентября </a >
 	
 
 
