--- a/18.html
+++ b/18.html
@@ -10,5 +10,7 @@
     border-bottom: 8px solid #fffb24; /* Параметры линии */
    }
   </style>
-<div><h2 class=".m">Изо</h2>
-Принести работукто не закончил и карандаши
+<div><h2 >Изо</h2>
+Принести работу кто не закончил и карандаши
+<h2 >Биология</h2>
+У.с 122-127 учить термины
