--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ document.write(day[d.getDay()]+" " +d.getDate()+ " " + month[d.getMonth()]
 <p > <h1><a class="nb" href="14.2.html">Дз русский на 14 сентября</a></h1></p>
 <p > <h1><a class="nb" href="15.html">Дз нагл. Геометрия, физика 15 сентября</a></h1></p>
 <p > <h1><a class="nb" href="17.html">Дз Обществознание 16 сентября</a></h1></p>
-<p > <h1><a class="nb" href="18.html">Дз изо 18 сентября</a></h1></p>
+<p > <h1><a class="nb" href="18.html">Дз изо, биология 18 сентября</a></h1></p>
 
 				
 			
