--- a/13.html
+++ b/13.html
@@ -24,4 +24,6 @@ W.b p.6 ex 1,2
 <h3>Ответы </h3>
 <img src="англ.jpg">
 <h2>Математика </h2>
-Упр 42-59 зелёные и выучить все призна ки деление на... 
+Упр 42-59 зелёные и выучить все призна ки деление на...
+<h2>Литература</h2>
+	у.с 22 номер 1 размышляем над прочитанном
