--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ document.write(day[d.getDay()]+" " +d.getDate()+ " " + month[d.getMonth()]
      
 				<p class="hj"> <h1><a class="nb" href="архив дз.html">Aрхив дз</a></h1></p>
 				
-				<p > <h1><a class="nb" href="13.html">Дз  география, английский, музыка, математика 13 сентября</a></h1></p>
+				<p > <h1><a class="nb" href="13.html">Дз  география, английский, музыка, математика, литература 13 сентября</a></h1></p>
 <p > <h1><a class="nb" href="14.2.html">Дз русский на 14 сентября</a></h1></p>
 <p > <h1><a class="nb" href="15.html">Дз нагл. Геометрия, физика 15 сентября</a></h1></p>
 <p > <h1><a class="nb" href="17.html">Дз Обществознание 16 сентября</a></h1></p>
