--- a/14.2.html
+++ b/14.2.html
@@ -14,4 +14,4 @@
 Упр 42
 <h2 >История</h2>
 Задание из презентации<br>
-	<a href=" " >Скачать презентацию</a>
+	<a href=" " class="nb" >Скачать презентацию</a>
