--- a/13.html
+++ b/13.html
@@ -23,6 +23,8 @@
 W.b p.6 ex 1,2
 <h3>Ответы </h3>
 <img src="англ.jpg">
+	2 группа<br>
+		выучить национальности
 <h2>Математика </h2>
 Упр 42-59 зелёные и выучить все призна ки деление на...
 <h2>Литература</h2>
