--- a/13.html
+++ b/13.html
@@ -22,7 +22,7 @@
 1 группа<br>
 W.b p.6 ex 1,2
 <h3>Ответы </h3>
-<img src="англ.jpg">
+<img src="англ.jpg"><br>
 	2 группа<br>
 		выучить национальности
 <h2>Математика </h2>
