--- a/13.html
+++ b/13.html
@@ -28,4 +28,4 @@ W.b p.6 ex 1,2
 <h2>Математика </h2>
 Упр 42-59 зелёные и выучить все призна ки деление на...
 <h2>Литература</h2>
-	у.с 22 номер 1 первому ряду, номер 2 втлрому ряду размышляем над прочитанном
+	у.с 22 номер 1 первому ряду, номер 2 второму ряду размышляем над прочитанном
