--- a/14.2.html
+++ b/14.2.html
@@ -15,3 +15,5 @@
 <h2 >История</h2>
 Задание из презентации<br>
 	<a href=" " class="nb" >Скачать презентацию</a>
+<h2 >Математика</h2>
+Номера 62, 66, 67, 69-72 правила учить и параграф 3 читать
