--- a/14.2.html
+++ b/14.2.html
@@ -17,3 +17,7 @@
 	<a href=" " class="nb" >Скачать презентацию</a>
 <h2 >Математика</h2>
 Номера 62, 66, 67, 69-72 правила учить и параграф 3 читать
+<h2 >Английский </h2>
+<h3>1 группа</h3>
+W.b p 7 ex 1 a, b
+<h3>2 группа</h3>
