--- a/14.2.html
+++ b/14.2.html
@@ -20,5 +20,7 @@
 <h2 >Английский </h2>
 <h3>1 группа</h3>
 W.b p 7 ex 1 a, b
+<img src="101.jpg">
+	<img src="100.jpg">
 <h3>2 группа</h3>
 Прочитать текст в учебнике 
