--- a/14.2.html
+++ b/14.2.html
@@ -16,7 +16,7 @@
 Задание из презентации<br>
 	<a href=" " class="nb" >Скачать презентацию</a>
 <h2 >Математика</h2>
-Номера 62, 66, 67, 69-72 правила учить и параграф 3 читать
+Номера 62, 66, 67, 69-72 правила учить и параграф 3 читать придумать задачу тукую же как в классе
 <h2 >Английский </h2>
 <h3>1 группа</h3>
 W.b p 7 ex 1 a, b<br>
