--- a/17.html
+++ b/17.html
@@ -13,3 +13,5 @@
 <div>
 <h2>Обществознание </h2>
 Записать ученых в твблицу и на писать какой вклад он внёс
+<h2>Литература </h2>
+29 страница выучить стихотворение подготовиться к соченению про друзей
