--- a/14.2.html
+++ b/14.2.html
@@ -12,6 +12,7 @@
   </style>
 <div><h2 >Русский</h2>
 Упр 42
+<img src="102.jpg">
 <h2 >История</h2>
 Задание из презентации<br>
 	<a href=" " class="nb" >Скачать презентацию</a>
