--- a/14.2.html
+++ b/14.2.html
@@ -15,7 +15,7 @@
 <img src="102.jpg">
 <h2 >История</h2>
 Задание из презентации<br>
-	<a href="ист.jpg " class="nb" >Скачать презентацию</a>
+	<a href="ист.jpg " class="nb" > презентация</a>
 <h2 >Математика</h2>
 Номера 62, 66, 67, 69-72 правила учить и параграф 3 читать придумать задачу тукую же как в классе
 <h2 >Английский </h2>
