--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ document.write(day[d.getDay()]+" " +d.getDate()+ " " + month[d.getMonth()]
 	<a href="расп2.jpg" class="nb" ><h3>Расписание уроков<h3></a>
 	<a href="звонки.jpg" class="nb" ><h4>Расписание звонков<h4></a>
 	<a href="https://drive.google.com/file/d/1ACUUIYCdgMj9H9x-XpAe5FoeU3YhBqbf/view?usp=drivesdk" class="nb" ><h4>Расписание дежурств<h4></a>
+	<a href="обязан.jpg" class="nb" ><h4>Обязанности дежурных<h4></a>
 	<a href="график.jpg" class="nb" ><h4>График захода в лицей<h4></a>
 <a href="учителя_3118474130252.jpg" class="nb" ><h4>Предметы и учителя<h4></a>
 	<h4><a href="список.jpg" class="nb" >Список литературы</a></h4>
