--- a/17.html
+++ b/17.html
@@ -15,3 +15,5 @@
 Записать ученых в твблицу и на писать какой вклад он внёс
 <h2>Литература </h2>
 29 страница выучить стихотворение подготовиться к соченению про друзей
+<h2>Математика</h2>
+74 в учебнике 76-90 зелёные в тетради
