--- a/17.html
+++ b/17.html
@@ -17,3 +17,6 @@
 29 страница выучить стихотворение подготовиться к соченению про друзей
 <h2>Математика</h2>
 74 в учебнике 76-90 зелёные в тетради
+<h2>Английский </h2>
+<h3>1 группа</h3>
+S.b p. 10 ex 5
