--- a/15.html
+++ b/15.html
@@ -10,7 +10,9 @@
     border-bottom: 8px solid #fffb24; /* Параметры линии */
    }
   </style>
-<div><h2 >Нагл. Геометрия</h2>
+<div><h2 >Русский</h2>
+Упр 48
+<h2 >Нагл. Геометрия</h2>
 Найти информацию о треугольных и других фигурных числах
 <h2 >Введение в физику</h2>
 Выучить какие бывают вещества
