--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@ document.write(day[d.getDay()]+" " +d.getDate()+ " " + month[d.getMonth()]
     <script>digitalClock();</script>
 	<div><h1 class="hj">Домашние задания 6а</h1>
 	<h3>Ближайшие контрольная</h3>
-Не найдено
+Русский проверочная по теме слово образование 15 сентября<br>
+География тест в рабочий тетради<br>
+Ответы<br>
+<img src="контргео.jpg">
 <p class="hj"> </p>
 <h2>Скачать мобильное приложение Dz6a для android</h2>
 <a href="скачать.html" class="nb" >Скачать</a>
