--- a/14.html
+++ b/14.html
@@ -10,7 +10,5 @@
     border-bottom: 8px solid #fffb24; /* Параметры линии */
    }
   </style>
-<div><h2 >История</h2>
-До делать таблицу и задание на странице 29
-<h2>Обществознание </h2>
-Записать ученых в твблицу и на писать какой вклад он внёс
+<div><h2 >Русский</h2>
+Упр 42
