--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ document.write(day[d.getDay()]+" " +d.getDate()+ " " + month[d.getMonth()]
 				
 
 
-<p > <h1><a class="nb" href="17.html">Дз Обществознание, литература, математика, английский 16 сентября</a></h1></p>
-<p > <h1><a class="nb" href="17.2.html">Дз история 17 сентября</a></h1></p>
+<p > <h1><a class="nb" href="17.html">Дз литература, математика, английский 16 сентября</a></h1></p>
+<p > <h1><a class="nb" href="17.2.html">Дз история, обществознание 17 сентября</a></h1></p>
 <p > <h1><a class="nb" href="18.html">Дз изо, биология 18 сентября</a></h1></p>
 <p > <h1><a class="nb" href="20.html">Дз география 20 сентября</a></h1></p>
 				
