--- a/17.2.html
+++ b/17.2.html
@@ -13,4 +13,6 @@
 <div><h2 >История</h2>
 До делать таблицу и задание на странице 29
 <h2>Обществознание </h2>
-Записать ученых в твблицу и на писать какой вклад он внёс
+Записать ученых в таблицу и на писать какой вклад он внёс
+<h2>Русский </h2>
+Упр 54
