--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@ document.write(day[d.getDay()]+" " +d.getDate()+ " " + month[d.getMonth()]
     <script>digitalClock();</script>
 	<div><h1 class="hj">Домашние задания 6а</h1>
 	<h3>Ближайшие контрольная</h3>
-Русский проверочная по теме слово образование 15 сентября<br>
 География тест в рабочий тетради<br>
 Ответы<br>
 <img src="контргео.jpg">
@@ -83,7 +82,7 @@ document.write(day[d.getDay()]+" " +d.getDate()+ " " + month[d.getMonth()]
 
 
 <p > <h1><a class="nb" href="17.html">Дз литература, математика, английский 16 сентября</a></h1></p>
-<p > <h1><a class="nb" href="17.2.html">Дз история, обществознание 17 сентября</a></h1></p>
+<p > <h1><a class="nb" href="17.2.html">Дз история, обществознание, русский 17 сентября</a></h1></p>
 <p > <h1><a class="nb" href="18.html">Дз изо, биология 18 сентября</a></h1></p>
 <p > <h1><a class="nb" href="20.html">Дз география 20 сентября</a></h1></p>
 				
