--- a/17.2.html
+++ b/17.2.html
@@ -10,8 +10,11 @@
     border-bottom: 8px solid #fffb24; /* Параметры линии */
    }
   </style>
+  
 <div><h2 >История</h2>
 До делать таблицу и задание на странице 29
+<h2 >Литература</h2>
+Страница 30 читать узник
 <h2>Обществознание </h2>
 Записать ученых в таблицу и на писать какой вклад он внёс
 <h2>Русский </h2>
