--- a/20.html
+++ b/20.html
@@ -12,3 +12,5 @@
   </style>
 <div><h2 >География </h2>
 33п записи в тетради учить р.т страница 7 номер 1-5 К.к страница 10-11
+<h2 >Математика</h2>
+91,94,96,98,99,103 параграфф 4 правило 33-34 читать
