--- a/20.html
+++ b/20.html
@@ -14,3 +14,6 @@
 33п записи в тетради учить р.т страница 7 номер 1-5 К.к страница 10-11
 <h2 >Математика</h2>
 91,94,96,98,99,103 параграфф 4 правило 33-34 читать
+<h2 >Английский </h2>
+1 группа <br>
+W.b p.9 ex 3,4
