--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ document.write(day[d.getDay()]+" " +d.getDate()+ " " + month[d.getMonth()]
 
 <p > <h1><a class="nb" href="17.2.html">Дз история, обществознание, русский, литература 17 сентября</a></h1></p>
 <p > <h1><a class="nb" href="18.html">Дз изо, биология 18 сентября</a></h1></p>
-<p > <h1><a class="nb" href="20.html">Дз география, математика 20 сентября</a></h1></p>
+<p > <h1><a class="nb" href="20.html">Дз география, математика, английский 20 сентября</a></h1></p>
 				
 			
 	<p class="hj"></p>
