--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ document.write(day[d.getDay()]+" " +d.getDate()+ " " + month[d.getMonth()]
 
 
 
-<p > <h1><a class="nb" href="17.2.html">Дз история, обществознание, русский, литература 17 сентября</a></h1></p>
-<p > <h1><a class="nb" href="18.html">Дз изо, биология 18 сентября</a></h1></p>
+
+<p > <h1><a class="nb" href="18.html">Дз изо, биология, русский 18 сентября</a></h1></p>
 <p > <h1><a class="nb" href="20.html">Дз география, математика, английский 20 сентября</a></h1></p>
 <p > <h1><a class="nb" href="22.html">Дз нагл.геометрия, физика 22 сентября</a></h1></p>
 				
