--- a/архив дз.html
+++ b/архив дз.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="logo.ico">
    </head>
 <div>
+	<p > <h1><a class="nb" href="17.2.html">Дз история, обществознание, русский, литература 17 сентября</a></h1></p>
 	<p > <h1><a class="nb" href="17.html">Дз литература, математика, английский 16 сентября</a></h1></p>
 	<p > <h1><a class="nb" href="15.html">Дз нагл. Геометрия, физика, русский 15 сентября</a></h1></p>
 	<p > <h1><a class="nb" href="14.2.html">Дз русский, история, математика, английский на 14 сентября</a></h1></p>
