--- a/18.html
+++ b/18.html
@@ -14,6 +14,6 @@
 Принести работу кто не закончил и карандаши
 <h2 >Биология</h2>
 У.с 122-127 учить термины
-<img src="биология.jpg">
+<img src="биология.jpg" width="60%" >
 <h2 >Русский</h2>
 Упр 66 и РНО
