--- a/18.html
+++ b/18.html
@@ -13,7 +13,7 @@
 <div><h2 >Изо</h2>
 Принести работу кто не закончил и карандаши
 <h2 >Биология</h2>
-У.с 122-127 учить термины
+У.с 122-127 учить термины<br>
 <img src="биология.jpg" width="60%" >
 <h2 >Русский</h2>
 Упр 66 и РНО
