--- a/18.html
+++ b/18.html
@@ -11,7 +11,7 @@
    }
   </style>
 <div><h2 >Изо</h2>
-Принести работу кто не закончил и карандаши
+Придумать и выполнить любой вид пейзажа цветными карандашами. Законченную работу  принести на след. урок.
 <h2 >Биология</h2>
 У.с 122-127 учить термины<br>
 <img src="биология.jpg" width="60%" >
