--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ document.write(day[d.getDay()]+" " +d.getDate()+ " " + month[d.getMonth()]
 
 <p > <h1><a class="nb" href="18.html">Дз изо, биология, русский 18 сентября</a></h1></p>
 <p > <h1><a class="nb" href="20.html">Дз география, математика, английский, литература 20 сентября</a></h1></p>
+<p > <h1><a class="nb" href="21.html">Дз история 21 сентября</a></h1></p>
 <p > <h1><a class="nb" href="22.html">Дз нагл.геометрия, физика 22 сентября</a></h1></p>
 <p > <h1><a class="nb" href="24.html">Дз обществознание 24 сентября</a></h1></p> 
 				
